Небольшие твики API