@@ -1,28 +1,21 @@
 package ru.herobrine1st.fusion.api.command.declare;
 
-import net.dv8tion.jda.api.interactions.commands.build.BaseCommand;
-import net.dv8tion.jda.api.interactions.commands.build.OptionData;
-import net.dv8tion.jda.api.utils.data.DataArray;
 import net.dv8tion.jda.internal.utils.Checks;
 import ru.herobrine1st.fusion.api.command.CommandExecutor;
 import ru.herobrine1st.fusion.api.command.PermissionHandler;
 import ru.herobrine1st.fusion.api.command.args.ParserElement;
 
 import javax.annotation.Nonnull;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
-import java.util.Locale;
+import java.util.*;
 
 public abstract class FusionBaseCommand<T extends FusionBaseCommand<T>> {
-    private final List<ParserElement> arguments = new ArrayList<>();
     private CommandExecutor executor = null;
     private PermissionHandler permissionHandler = PermissionHandler.DEFAULT;
     private String name, description, shortName;
 
     protected final List<Object> options = new ArrayList<>();
 
-    public FusionBaseCommand(@Nonnull String name, @Nonnull String description) {
+    protected FusionBaseCommand(@Nonnull String name, @Nonnull String description) {
         Checks.notEmpty(name, "Name");
         Checks.notEmpty(description, "Description");
         Checks.notLonger(name, 32, "Name");
@@ -98,13 +91,14 @@ public abstract class FusionBaseCommand<T extends FusionBaseCommand<T>> {
     public T addArguments(ParserElement... elements) {
         Checks.noneNull(elements, "Argument");
         Checks.check(elements.length + this.options.size() <= 25, "Cannot have more than 25 options for a command!");
-        this.options.addAll(List.of(elements));
+        this.options.addAll(Arrays.asList(elements));
         return (T) this;
     }
 
     @Nonnull
+    @SuppressWarnings("unchecked")
     public Collection<ParserElement> getArguments() {
-        return this.arguments;
+        return (Collection<ParserElement>) (Object) this.options;
     }
 
     @Nonnull
